fixed add category on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 }
 
 .input-group {
-  width: 42% !important;
+  width: 47% !important;
   
 }
 
